@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-12T02:20:45Z",
+  "timestamp" : "2022-07-14T08:27:00Z",
   "count_outdated" : 239,
   "uniques_outdated" : 55,
-  "count" : 247,
-  "uniques" : 58,
+  "count" : 249,
+  "uniques" : 59,
   "views" : [
     {
       "timestamp": "2022-06-30T00:00:00Z",
@@ -23,6 +23,13 @@
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 6,
       "count_minmax": [ 6, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-14T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
