@@ -1,3 +1,10 @@
+2022-07-14T08:27:00Z:
+* notice: last 14d: unq all: 4 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 55 239 / 58 247
+* notice: next accum: outdated-unq outdated-all / unq all: 55 239 / 59 249
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-14]
+
 2022-07-12T02:20:45Z:
 * notice: last 14d: unq all: 3 8
 * notice: prev accum: outdated-unq outdated-all / unq all: 54 237 / 58 247
